# Browser

./: .gitignore  Cargo.toml
browser/: Cargo.toml
browser/src/: dom.rs  html_render.rs  main.rs  styles.rs  web_frame.rs
browser/src/dom/: html_block_elements.rs  html_node.rs  html_root.rs  html_text.rs  selector.rs
html-parser/: Cargo.toml
html-parser/src/: css_parse.rs  lib.rs  tag_parse.rs  tag_parse_legacy.rs  tree_generation.rs  tree_generation_2.rs
tree/: Cargo.toml
tree/src/: lib.rs
